--- a/_config.yml
+++ b/_config.yml
@@ -178,7 +178,7 @@ collections:
   teaching:
     output: true
     permalink: /:collection/:path/
-  publications:
+  educations:
     output: true
     permalink: /:collection/:path/
   portfolio:
@@ -218,10 +218,10 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _publications
+  # _educations
   - scope:
       path: ""
-      type: publications
+      type: educations
     values:
       layout: single
       author_profile: true
@@ -236,10 +236,10 @@ defaults:
       author_profile: true
       share: true
       comment: true
-  # _talks
+  # _courses
   - scope:
       path: ""
-      type: talks
+      type: courses
     values:
       layout: talk
       author_profile: true
