--- a/_config.yml
+++ b/_config.yml
@@ -175,7 +175,7 @@ kramdown:
 
 # Collections
 collections:
-  teaching:
+  experiences:
     output: true
     permalink: /:collection/:path/
   educations:
@@ -209,10 +209,10 @@ defaults:
     values:
       layout: single
       author_profile: true
-  # _teaching
+  # _experiences
   - scope:
       path: ""
-      type: teaching
+      type: experiences
     values:
       layout: single
       author_profile: true
@@ -309,3 +309,5 @@ compress_html:
   clippings: all
   ignore:
     envs: development
+
+minimal_mistakes_skin: "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum" "sunrise"
