--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,17 +6,17 @@ main:
   - title: "Relevant Courses"
     url: /courses/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Experiences"
+    url: /experiences/    
     
   - title: "Awards and Honors"
     url: /awards/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  # - title: "Blog Posts"
+  #   url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
+  # - title: "CV"
+  #   url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
+  # - title: "Guide"
+  #   url: /markdown/
